Move try into getDeprecations